{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 16,
  "lineage": "96cd69be-d869-6b57-b249-3c989e9449f9",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250310110660:internet-gateway/igw-01e6a3c11c844ec85",
            "id": "igw-01e6a3c11c844ec85",
            "owner_id": "250310110660",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Team": "infra"
            },
            "vpc_id": "vpc-0afaa953f6084102b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01e6a3c11c844ec85",
            "id": "r-rtb-007f6ad0abb4ca5001080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-007f6ad0abb4ca500",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250310110660:route-table/rtb-0c1baf3b1ce74e480",
            "id": "rtb-0c1baf3b1ce74e480",
            "owner_id": "250310110660",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-private-us-west-1a",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-private-us-west-1a",
              "Team": "infra"
            },
            "vpc_id": "vpc-0afaa953f6084102b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250310110660:route-table/rtb-00fbdc3d7a0fe90da",
            "id": "rtb-00fbdc3d7a0fe90da",
            "owner_id": "250310110660",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-private-us-west-1c",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-private-us-west-1c",
              "Team": "infra"
            },
            "vpc_id": "vpc-0afaa953f6084102b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250310110660:route-table/rtb-007f6ad0abb4ca500",
            "id": "rtb-007f6ad0abb4ca500",
            "owner_id": "250310110660",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-public",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-public",
              "Team": "infra"
            },
            "vpc_id": "vpc-0afaa953f6084102b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084ea89fc3b726ca3",
            "route_table_id": "rtb-0c1baf3b1ce74e480",
            "subnet_id": "subnet-0e255787da6134a5b"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c05c369c876dda8",
            "route_table_id": "rtb-00fbdc3d7a0fe90da",
            "subnet_id": "subnet-06e950035708f4539"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffd07381dfe62cf6",
            "route_table_id": "rtb-007f6ad0abb4ca500",
            "subnet_id": "subnet-08793f85f35a7379b"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa6e7f96c33ac840",
            "route_table_id": "rtb-007f6ad0abb4ca500",
            "subnet_id": "subnet-0a1cfaea8af8b5aaa"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250310110660:subnet/subnet-0e255787da6134a5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.8.0/24",
            "id": "subnet-0e255787da6134a5b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "250310110660",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-db-us-west-1a",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-db-us-west-1a",
              "Team": "infra"
            },
            "vpc_id": "vpc-0afaa953f6084102b"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250310110660:subnet/subnet-06e950035708f4539",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.9.0/24",
            "id": "subnet-06e950035708f4539",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "250310110660",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-db-us-west-1c",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-db-us-west-1c",
              "Team": "infra"
            },
            "vpc_id": "vpc-0afaa953f6084102b"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250310110660:subnet/subnet-08793f85f35a7379b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-08793f85f35a7379b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "250310110660",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-public-us-west-1a",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-public-us-west-1a",
              "Team": "infra"
            },
            "vpc_id": "vpc-0afaa953f6084102b"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250310110660:subnet/subnet-0a1cfaea8af8b5aaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a1cfaea8af8b5aaa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "250310110660",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-public-us-west-1c",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-public-us-west-1c",
              "Team": "infra"
            },
            "vpc_id": "vpc-0afaa953f6084102b"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250310110660:vpc/vpc-0afaa953f6084102b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0beb804ad1f90ee2a",
            "default_route_table_id": "rtb-0326bb8126f95471e",
            "default_security_group_id": "sg-0eb3e4ecc6cc48d6c",
            "dhcp_options_id": "dopt-0e9af042d1a621e73",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0afaa953f6084102b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0326bb8126f95471e",
            "owner_id": "250310110660",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc",
              "Team": "infra"
            }
          }
        }
      ]
    }
  ]
}